# poise-voice-isolator

./: .gitignore  Fixing Android Build Issues.md  LICENSE  README.md  build-linux.sh  install-linux.sh  nuitka-crash-report.xml  poise_tui.py  poise_windows.spec  pyproject.toml  requirements.txt  run_denoiser.py  run_poise_gui.py  setup.iss
aur-bin/: PKGBUILD
stream_denoiser/: __init__.py  __main__.py  backend_detection.py  cli.py  constants.py  device_utils.py  logging_config.py  platform_utils.py  processor.py  resampler.py  ring_buffer.py  vad.py  vb_cable.py
stream_denoiser/backends/: __init__.py  pyaudio_backend.py  sounddevice_backend.py
stream_denoiser/backends/platform/: __init__.py  linux.py  windows.py
stream_denoiser/gui/: __init__.py  __main__.py  main_window.py  settings.py  styles.py  system_tray.py  utils.py  worker.py
stream_denoiser/gui/widgets/: __init__.py  device_selector.py  stats_panel.py  toggle_button.py
stream_denoiser/tui/: __init__.py  __main__.py  app.py  font.py  styles.tcss
stream_denoiser/tui/widgets/: __init__.py  device_list.py  stats_panel.py  status_line.py  vad_panel.py
